<resources>
    <string name="app_name">MovieReviewsApp</string>
    <string name="img_content_desc">an image for the movie</string>
    <string name="title">Title</string>
    <string name="published_by">Published By</string>
    <string name="rating">Rating</string>
    <string name="summary">Summary</string>
    <string name="date">Date</string>
    <string name="no_rating">No Rating</string>
</resources>